--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div><br>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Udani Lokuhetti</a>.
   </div>
 </body>
 </html>
